# pythonWpoetry

./: README.md  conf.py  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  pyproject.toml  python_w_poetry.html  search.html  searchindex.js  tests.html
.github/workflows/: auto_test.yml  docs2pages.yml  pylint.yml  sphinx.yml
_sources/: modules.rst.txt  python_w_poetry.rst.txt
docs/: conf.py  index.rst  tests.rst
python_w_poetry/: funct.py
tests/: test_first_word.py
