[tool.poetry]
name = "pythonwpoetry"
version = "0.1.0"
description = ""
authors = ["Antonio Al Makdissi <antoniomakdissi1@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonwpoetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
